--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,82 +1,3 @@
-# # Use the specified Node.js version as the base image
-# FROM node:20.15.0
-
-# # Create and change to the app directory
-# WORKDIR /usr/src/app
-
-# # Copy application dependency manifests to the container image
-# # A wildcard is used to ensure both package.json AND package-lock.json are copied
-# COPY package*.json ./
-
-# # Install dependencies
-# RUN npm install
-
-# # Copy local code to the container image
-# COPY . .
-
-# # Build the application
-# RUN npm run build
-
-# RUN rm -rf ./src
-
-# # Document that the service listens on port 3000
-# EXPOSE 3001
-
-# Run the web service on container startup
-# CMD [ "npm", "run",  "start:prod" ]
-# Use the specified Node.js version as the base image
-# FROM node:20.15.0
-
-# # Create and change to the app directory
-# WORKDIR /usr/src/app
-
-# # Copy application dependency manifests to the container image
-# COPY package*.json ./
-
-# # Install dependencies
-# RUN npm install --only=production
-
-# # Copy local code to the container image
-# COPY . .
-
-# # Build the application
-# RUN npm run build
-
-# RUN rm -rf ./src
-# # Document that the service listens on the specified port
-# EXPOSE 3001
-
-# # Run the web service on container startup
-# CMD [ "npm", "run",  "start:prod" ]
-# Use the specified Node.js version as the base image
-# Use the specified Node.js version as the base image
-# FROM node:20.15.0
-
-# # Create and change to the app directory
-# WORKDIR /usr/src/app
-
-# # Copy application dependency manifests to the container image
-# COPY package*.json ./
-
-# # Install all dependencies
-# RUN npm install
-
-# # Copy local code to the container image
-# COPY . .
-
-# # Build the application
-# RUN npm run build
-
-# # Remove dev dependencies
-# RUN npm prune --production
-
-# # Document that the service listens on port 3001
-# EXPOSE 3001
-
-# # Run the web service on container startup
-# CMD ["npm", "run", "start:prod"]
-
-
 # Use the specified Node.js version as the base image
 FROM node:20.15.0
 
@@ -98,9 +19,11 @@ RUN npm run build
 # Prune dev dependencies
 RUN npm prune --production
 
+# Remove source files if needed
+RUN rm -rf ./src
+
 # Document that the service listens on port 3001
 EXPOSE 3001
 
 # Run the web service on container startup
 CMD ["npm", "run", "start:prod"]
-    
