--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,32 +1,3 @@
-# # Use the specified Node.js version as the base image
-# FROM node:20.15.0
-
-# # Create and change to the app directory
-# WORKDIR /usr/src/app
-
-# # Copy application dependency manifests to the container image
-# COPY package*.json ./
-
-# # Install all dependencies
-# RUN npm install
-
-# # Copy local code to the container image
-# COPY . .
-
-# # Build the application
-# RUN npm run build
-
-# # Prune dev dependencies
-# RUN npm prune --production
-
-# # Remove source files if needed
-# RUN rm -rf ./src
-
-# # Document that the service listens on port 3001
-# EXPOSE 3001
-
-# # Run the web service on container startup
-# CMD ["npm", "run", "start:prod"]
 # Use the specified Node.js version as the base image
 FROM node:20.15.0
 
@@ -37,7 +8,7 @@ WORKDIR /usr/src/app
 COPY package*.json ./
 
 # Install all dependencies
-RUN npm install --production
+RUN npm install
 
 # Copy local code to the container image
 COPY . .
@@ -45,7 +16,10 @@ COPY . .
 # Build the application
 RUN npm run build
 
-# Remove unnecessary source files if needed
+# Prune dev dependencies
+RUN npm prune --production
+
+# Remove source files if needed
 RUN rm -rf ./src
 
 # Document that the service listens on port 3001
@@ -53,3 +27,29 @@ EXPOSE 3001
 
 # Run the web service on container startup
 CMD ["npm", "run", "start:prod"]
+# Use the specified Node.js version as the base image
+# FROM node:20.15.0
+
+# # Create and change to the app directory
+# WORKDIR /usr/src/app
+
+# # Copy application dependency manifests to the container image
+# COPY package*.json ./
+
+# # Install all dependencies
+# RUN npm install --production
+
+# # Copy local code to the container image
+# COPY . .
+
+# # Build the application
+# RUN npm run build
+
+# # Remove unnecessary source files if needed
+# RUN rm -rf ./src
+
+# # Document that the service listens on port 3001
+# EXPOSE 3001
+
+# # Run the web service on container startup
+# CMD ["npm", "run", "start:prod"]
