--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -28,12 +28,12 @@ services:
     environment:
       - PORT=3001
       - NODE_ENV=production
-      - DATABASE_USERNAME=muky_albany
-      - DATABASE_PASSWORD=iOoWAcFOvQUPnqooXU9II2kvNLgd7KQ0
-      - DATABASE_NAME=grambutler
-      - ACCESS_TOKEN=192293@***@39EI49!!944121DKDJFJ##4555512
-      - REFRESH_TOKEN=DKDJFJP***4555@@@512
-      - ROLE_TOKEN=192293@***@39EI49!!9R44121DKDJFJ##4555512
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - DATABASE_NAME=${DATABASE_NAME}
+      - ACCESS_TOKEN=${ACCESS_TOKEN}
+      - REFRESH_TOKEN=${REFRESH_TOKEN}
+      - ROLE_TOKEN=${ROLE_TOKEN}
     volumes:
       - ./src:/usr/src/app/src
 
