--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,10 +24,10 @@ services:
       context: .
       dockerfile: Dockerfile.prod
     ports:
-      - '3001:3001'
+      - '${PORT}:${PORT}'
     environment:
-      - PORT=3001
-      - NODE_ENV=production
+      - PORT=${PORT}
+      - NODE_ENV=${NODE_ENV}
       - DATABASE_USERNAME=${DATABASE_USERNAME}
       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
       - DATABASE_NAME=${DATABASE_NAME}
