Adding stripe payment

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,11 +8,14 @@
 #     ports:
 #       - '3001:3001'
 #     environment:
-#       - PORT=3001
+#       - PORT=${PORT}
 #       - NODE_ENV=production
-#       - DATABASE_USERNAME=muky_albany
-#       - DATABASE_PASSWORD=iOoWAcFOvQUPnqooXU9II2kvNLgd7KQ0
-#       - DATABASE_NAME=grambutler
+#       - DATABASE_USERNAME=${DATABASE_USERNAME}
+#       - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+#       - DATABASE_NAME=${DATABASE_NAME}
+#       - ACCESS_TOKEN=${ACCESS_TOKEN}
+#       - REFRESH_TOKEN=${REFRESH_TOKEN}
+#       - ROLE_TOKEN=${ROLE_TOKEN}
 #     volumes:
 #       - ./src:/usr/src/app/src
 
@@ -34,6 +37,3 @@ services:
       - ACCESS_TOKEN=${ACCESS_TOKEN}
       - REFRESH_TOKEN=${REFRESH_TOKEN}
       - ROLE_TOKEN=${ROLE_TOKEN}
-    volumes:
-      - ./src:/usr/src/app/src
-
