--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,23 +1,4 @@
-version: '3.8'
-
-services:
-  nestjs_api_prod:
-    build:
-      context: .
-      dockerfile: Dockerfile.prod
-    ports:
-      - '3001:3001'
-    environment:
-      - PORT=${PORT}
-      - NODE_ENV=production
-      - DATABASE_USERNAME=${DATABASE_USERNAME}
-      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
-      - DATABASE_NAME=${DATABASE_NAME}
-      - ACCESS_TOKEN=${ACCESS_TOKEN}
-      - REFRESH_TOKEN=${REFRESH_TOKEN}
-      - ROLE_TOKEN=${ROLE_TOKEN}
-    volumes:
-      - ./src:/usr/src/app/src
+# version: '3.8'
 
 # services:
 #   nestjs_api_prod:
@@ -35,4 +16,26 @@ services:
 #       - ACCESS_TOKEN=${ACCESS_TOKEN}
 #       - REFRESH_TOKEN=${REFRESH_TOKEN}
 #       - ROLE_TOKEN=${ROLE_TOKEN}
-#     command: ["sh", "-c", "npx typeorm migration:run -d dist/data-source.js && npm run start:prod"]
+#     volumes:
+#       - ./src:/usr/src/app/src
+services:
+  nestjs_api_prod:
+    build:
+      context: .
+      dockerfile: Dockerfile.prod
+    ports:
+      - '3000:3000'
+    environment:
+      - NODE_ENV=production
+      - PORT=3000
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - DATABASE_NAME=${DATABASE_NAME}
+      - ACCESS_TOKEN=${ACCESS_TOKEN}
+      - REFRESH_TOKEN=${REFRESH_TOKEN}
+      - ROLE_TOKEN=${ROLE_TOKEN}
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
