--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,49 @@
 #     restart: always
 #     ports:
 #       - '8080:8080'
+# version: '3.8'
+# services:
+#   nestjs_api_dev:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     ports:
+#       - '3000:3000'
+#     environment:
+#       PORT: 3000
+#       NODE_ENV: development
+#       DATABASE_HOST: db
+#     volumes:
+#       - ./src:/usr/src/app/src
+#     # command: ["sh", "-c", "npx typeorm migration:run -d src/data-source.ts && npm run start:dev"]
+#     networks:
+#       - grambutler_project_default
+
+#   db:
+#     image: postgres
+#     restart: always
+#     ports:
+#       - '5432:5432'
+#     environment:
+#       POSTGRES_PASSWORD: iOoWAcFOvQUPnqooXU9II2kvNLgd7KQ0
+#       POSTGRES_USER: muky_albany
+#       POSTGRES_DB: grambutler
+#     networks:
+#       - grambutler_project_default
+
+#   adminer:
+#     image: adminer
+#     restart: always
+#     ports:
+#       - '8080:8080'
+#     networks:
+#       - grambutler_project_default
+
+# networks:
+#   grambutler_project_default:
+#     driver: bridge
+
+
 version: '3.8'
 services:
   nestjs_api_dev:
@@ -74,7 +117,7 @@ services:
       - ./src:/usr/src/app/src
     # command: ["sh", "-c", "npx typeorm migration:run -d src/data-source.ts && npm run start:dev"]
     networks:
-      - grambutler_project_default
+      - errands_project_default
 
   db:
     image: postgres
@@ -84,18 +127,18 @@ services:
     environment:
       POSTGRES_PASSWORD: iOoWAcFOvQUPnqooXU9II2kvNLgd7KQ0
       POSTGRES_USER: muky_albany
-      POSTGRES_DB: grambutler
+      POSTGRES_DB: errands
     networks:
-      - grambutler_project_default
+      - errands_project_default
 
   adminer:
     image: adminer
     restart: always
     ports:
-      - '8080:8080'
+      - '8081:8080'
     networks:
-      - grambutler_project_default
+      - errands_project_default
 
 networks:
-  grambutler_project_default:
+  errands_project_default:
     driver: bridge
