--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "migration:run": "npm run typeorm migration:run"
   },
   "dependencies": {
-    "@nestjs/axios": "^3.0.3",
-    "@nestjs/common": "^10.3.10",
-    "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.3.10",
-    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/axios": "^4.0.0",
+    "@nestjs/common": "^11.0.5",
+    "@nestjs/config": "^4.0.0",
+    "@nestjs/core": "^11.0.5",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^10.3.10",
-    "@nestjs/typeorm": "^10.0.2",
+    "@nestjs/platform-express": "^11.0.5",
+    "@nestjs/platform-socket.io": "^11.0.5",
+    "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.0.5",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -50,7 +52,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^11.0.5",
     "@types/aws-sdk": "^0.0.42",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
@@ -58,6 +60,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
