--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -42,7 +42,8 @@ RUN npm run build
 RUN npm prune --production
 
 # ✅ Ensure the public folder with _redirects is copied
-COPY public /usr/src/public
+COPY src/public /usr/src/public
+
 
 RUN rm -rf ./src
 
