--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -1,4 +1,5 @@
 
+# # Use the specified Node.js version as the base image
 # FROM node:20.15.0
 
 # # Create and change to the app directory
@@ -27,28 +28,60 @@
 
 # # Run the web service on container startup
 # CMD ["npm", "run", "start:prod"]
+
+# Use the specified Node.js version as the base image
+# FROM node:20.15.0
+
+# # Create and change to the app directory
+# WORKDIR /usr/src/app
+
+# # Copy application dependency manifests to the container image
+# COPY package*.json ./
+
+# # Install all dependencies
+# RUN npm install
+
+# # Copy local code to the container image
+# COPY . .
+
+# # Build the application
+# RUN npm run build
+
+# # Prune dev dependencies
+# RUN npm prune --production
+
+# # Remove source files if needed
+# RUN rm -rf ./src
+
+# # Document that the service listens on port 3001
+# EXPOSE 3001
+
+# # Run the web service on container startup
+# CMD ["npm", "run", "start:prod"]
+
+
 FROM node:20.15.0
 
+# Create and change to the app directory
 WORKDIR /usr/src
 
+# Copy application dependency manifests to the container image
 COPY package*.json ./
 
+# Install all dependencies
 RUN npm install
 
+# Copy local code to the container image
 COPY . .
 
+# Build the application
 RUN npm run build
 
+# Prune dev dependencies
 RUN npm prune --production
 
-# ✅ Ensure the public folder with _redirects is copied
-COPY src/public /usr/src/public
-
-
+# Remove source files if needed
 RUN rm -rf ./src
 
-# ✅ Fix the port to match WebSocket
+# Document that the service listens on port 3001
 EXPOSE 3001
-
-CMD ["npm", "run", "start:prod"]
-
